styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');

:root {
    --white: #FFF;
    --color-text: #FAFAFA;
    --color-text-2: #000;
    --color-secondary-2: #DB4444;
}

body {
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    color: var(--color-text-2);
    font-weight: 400;
}

html, body {
    width: 100%;
}

*, *::before, *::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

.app__landingPage {
    margin: auto;
    max-width: 1170px;
    width: 100%;
}

.app__landingPage-header {
    margin-bottom: 60px;
}

.app__landingPage-header_redSquare {
    border-radius: 4px;
    background-color: var(--color-secondary-2);
    width: 20px;
    height: 40px;
}

.app__landingPage-header_category > span {
    color: var(--color-secondary-2);
    font-weight: 600;
    line-height: 20px;
    font-size: 16px;
}

.app__landingPage-header_category {
    display: flex;
    justify-content: start;
    gap: 16px;
    align-items: center;
    margin-bottom: 20px;
}

.app__landingPage-header_title > h2{
    font-size: 36px;
    font-weight: 600;
    font-family: 'Inter', sans-serif;
    line-height: 48px;
}

.app__landingPage-featured {
    margin-bottom: 140px;
}

.app__landingPage-featured_grid {
    display: grid;
    grid-template-columns: 2fr 1fr 1fr;
    grid-template-rows: repeat(2, 1fr);
    grid-gap: 32px 30px;
    min-height: 600px;
    margin-bottom: 140px;
}
.app__landingPage-featured_grid > div {
    color: var(--color-text);
}

.app__landingPage-featured_grid > div h3 {
    font-family: 'Inter', sans-serif;
    font-size: 24px;
    line-height: 24px;
    font-weight: 600;
    margin-bottom: 8px;
}

.app__landingPage-featured_grid > div p{
    font-size: 14px;
    line-height: 21px;
    margin-bottom: 8px;
}

.app__landingPage-featured_grid > div a {
    font-size: 16px;
    font-weight: 500;
    line-height: 24px;
    text-decoration: none;
    width: fit-content;
    border-bottom: 1px solid var(--color-text);
    color: var(--color-text);
}

#square-image p, #square-image h3 {
    margin-bottom: 16px;
}


#square-image {
    background: var(--color-text-2) url('./assets/images/featured/ps5.png') no-repeat center bottom/cover;
    background-size: 120%;
    display: flex;
    flex-direction: column;
    grid-column: 1;
    grid-row: 1 / span 2;
    justify-content: end;
    padding: 32px;
}

#large-image {
    background: #0D0D0D url('./assets/images/featured/sombrero.jpg') no-repeat right bottom/contain;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: start;
    grid-row: 1;
    grid-column: 2 / span 2;
    padding: 24px;
}

#small-image-left {
    background: var(--color-text-2) url('./assets/images/featured/amazon-echo.png') no-repeat center center/contain;
    background-size: 70%;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: start;
    padding: 24px;
}

#small-image-right {
    background: var(--color-text-2) url('./assets/images/featured/gucci.png') no-repeat center center/contain;
    background-size: 70%;
    display: flex;
    flex-direction: column;
    justify-content: end;
    align-items: start;
    padding: 24px;
}

.app__landingPage-featured_circles {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.app__landingPage-featured_circles_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.app__landingPage-featured_circles_container > h3 {
    margin-bottom: 8px;
    font-size: 20px;
    font-weight: 600;
    line-height: 28px;
}

.app__landingPage-featured_circles_container > p {
    font-size: 14px;
    line-height: 21px;
    font-weight: 400;
}

.grey-circle {
    background-color: #C1C0C1;
    width: 80px;
    height: 80px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 24px;
}

.black-circle {
    background-color: #000;
    width: 58px;
    height: 58px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.black-circle > * {
    color: var(--white);
}

.app__landingPage-banner {
    padding: 56px 69px;
    background-color: #000;
    margin-bottom: 71px;
}

.app__landingPage-banner_container {
    display: flex;
}

.app__landingPage-bannner_info {
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    color: var(--white);
}

.app__landingPage-bannner_info span {
    color: #00FF66;
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 32px;
}

.app__landingPage-bannner_info h2 {
    color: var(--white);
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 48px;
    line-height: 60px;
    margin-bottom: 32px;
}

.app__landingPage-banner_circles_container {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 24px;
    margin-bottom: 40px;
}

.white-circle {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    background-color: var(--white);
    border-radius: 50%;
    width: 62px;
    height: 62px;
}

.white-circle p {
    font-size: 16px;
    line-height: 20px;
    font-weight: 600;
    color: #000;
}

.white-circle span {
    font-size: 11px;
    line-height: 18px;
    margin: 0;
    color: #000;
}

.btn-green {
    background-color: #00FF66;
    padding: 16px 48px;
    color: var(--white);
    font-weight: 500;
    font-size: 16px;
    line-height: 24px;
    border-radius: 4px;
    border: none;
}

.app_landingPage-banner_image {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
}

.app__landingPage-banner_image img {
    position: relative;
    max-width: 568px;
    max-height: 330px;
    object-fit: cover;
    z-index: 1;
}

/* .image-bg-light {
    position: absolute;
    top: 5%;
    width: 568px;
    height: 330px;
    border-radius: 50%;
    background-color: #d9d9d9;
    opacity: 0.3;
    filter: blur(100px);
    z-index: 0;
} */

.app__landingPage-navbar {
    padding-bottom: 16px;
    padding-top: 40px;
    border-bottom: 0.5px solid rgba(0, 0, 0, 0.3);;

}

.app__landingPage-navbar_container {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    margin: auto;
    max-width: 1170px;
}

.app__landingPage-navbar h2 {
    font-size: 24px;
    line-height: 24px;
    font-weight: 700;
    font-family: 'Inter', sans-serif;
}

.app__landingPage-navbar_links {
    display: flex;
    gap: 48px;
}

.app__landingPage-navbar_links > *{
    font-size: 16px;
    line-height: 24px;
    color: #000;
    text-decoration: none;
}

.app__landingPage-navbar_links a[selected] {
    border-bottom: 1px solid #000;
}

.app__landingPage-navbar_end {
    display: flex;
    align-items: baseline;
    gap: 30px;
}

input[type="text"]{
    background-color: #f5f5f5;
    padding: 10px 70px 10px 20px;
    border: none;
    color: #000;
    opacity: 0.5;
    font-size: 12px;
    line-height: 18px;
    min-width: 243px;
}

.app__landingPage-categories {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-bottom: 40px;
}

.app__landingPage-categories_container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding-right: 24.22px;
    padding-top: 40px;
    gap: 16px;
    border-right: 0.5px solid rgba(0, 0, 0, 0.3);
}

.category > a {
    color: black;
    text-decoration: none;
}

.app__landingPage-categories_carousel {
    padding: 40px 0px 0px 45px;
    width: 100%;
    display: flex;
    flex-direction: column;
    color: #FFF;
}

.app__landingPage-categories_carousel_container {
    background: #000000 url('./assets/images/navbar/iPhone14.jpeg') no-repeat right bottom/contain;
    width: 100%;
    height: 100%;
    display: flex;
}

.app__landingPage-categories_carousel_info {
    width: 50%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    padding: 58px 0px 47px 64px;
}

.img-text {
    display: flex;
    gap: 24px;
    display: flex;
    align-items: center;
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 20px;
}

.img-text img {
    max-width: 50px;
    max-height: 50px;
}

.img-text > a {
    color: #FFF;
    text-decoration: none;
    border-bottom: 0.5px solid #FFF;
    width: fit-content;
}

.app__landingPage-categories_carousel_info > h3 {
    font-family: 'Inter', sans-serif;
    font-size: 48px;
    font-style: 500;
    line-height: 60px;
    margin-bottom: 22px;
}

.category {
    display: flex;
    justify-content: space-between;
    min-width: 217px;
    align-items: center;
}

@media (max-width: 480px) {
    .app__landingPage {
        margin: 0;
        padding: 0px 24px;
    }
    .app__landingPage-featured_circles {
        flex-direction: column;
        gap: 24px;
        align-items: center;
    }
    .app__landingPage-featured_grid {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: repeat(4, 1fr);
        grid-auto-flow: column;
    }
    #square-image {
        background: #000000 url('./assets/images/featured/ps5.png') no-repeat right bottom/contain;
        grid-column: 1;
        grid-row: 1;
        justify-content: end;
        padding: 24px;
        background-size: 60%;
    }
    #large-image {
        justify-content: end;
        align-items: start;
        grid-row: 2;
        grid-column: 1;
        padding: 24px;
    }
    #small-image-right {
        background: #000000 url('./assets/images/featured/gucci.png') no-repeat right bottom/contain;
        background-size: 50%;
    }
    #small-image-left {
        background: #000000 url('./assets/images/featured/amazon-echo.png') no-repeat right bottom/contain;
        background-size: 40%;
    }
}

@media (max-width: 768px) {
    .app__landingPage {
        margin: 0;
        padding: 0px 24px;
    }
    .app__landingPage-featured_circles {
        flex-direction: column;
        gap: 24px;
        align-items: center;
    }
    .app__landingPage-featured_grid {
        grid-gap: 16px 15px;
    }
}

@media (max-width: 1218px) {
    .app__landingPage {
        margin: 0;
        padding: 0px 48px;
    }

    .app__landingPage-featured_grid {
        grid-gap: 16px 15px;
    }
    
}

